# AgarPlusPlus

./: .gitignore  CMakeLists.txt  LocalConfig.cmake  README.md  agar.cpp
CMake/: CMakeFindExtensions.cmake  CMakeHelpers.cmake  FindRapidJSON.cmake  FindWebRTC.cmake
frontend/: Main.html  temp.js  tempgame.js
frontend/Game/Controller/: GameController.js  NetworkService.js
frontend/Game/Model/: GameModel.js
frontend/Game/View/: GameView.js
frontend/Styles/: main.css
include/: webrtc_observers.h
include/game/: BoostCell.h  FoodCell.h  GameObject.h  Model.h  ObjectType.h  PlayerCell.h  Range.h
include/grid/: GridsTypes.h  HierarchicalGrid.h  SpatialGrid.h
include/network/: Input.h  NetworkContext.h  NetworkManager.h  Packet.h  PacketDocument.h  PacketType.h  PlayerProxy.h  SignalingManager.h  WebRTCConfiguration.h  WebRTCConnection.h  WebRTCConnectionFactory.h  WebSocketConnection.h
include/replication/: ReplicationActionType.h  ReplicationCommand.h  ReplicationManager.h
include/server/: Server.h
include/time/: TimeManager.h
scripts/: install_boost.sh  install_webrtc.sh
src/: webrtc_server.cpp
src/game/: BoostCell.cpp  GameObject.cpp  Model.cpp  ObjectType.cpp
src/grid/: HierarchicalGrid.cpp  SpatialGrid.cpp
src/network/: Input.cpp  NetworkContext.cpp  NetworkManager.cpp  Packet.cpp  PacketDocument.cpp  PacketType.cpp  PlayerProxy.cpp  SignalingManager.cpp  WebRTCConfiguration.cpp  WebRTCConnection.cpp  WebRTCConnectionFactory.cpp  WebSocketConnection.cpp
src/replication/: ReplicationActionType.cpp  ReplicationCommand.cpp  ReplicationManager.cpp
src/server/: Server.cpp
src/time/: TimeManager.cpp
